; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_htmldoc.c_reset_document.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_htmldoc.c_reset_document.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IID_IPersistStreamInit = common dso_local global i32 0, align 4
@S_OK = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [53 x i8] c"QueryInterface(IID_IPersistStreamInit) failed: %08x\0A\00", align 1
@TRUE = common dso_local global i32 0, align 4
@resetting_document = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [19 x i8] c"Load failed: %08x\0A\00", align 1
@FALSE = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [12 x i8] c"about:blank\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @reset_document to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @reset_document(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = bitcast i32** %3 to i8**
  %7 = call i64 @IHTMLDocument2_QueryInterface(i32* %5, i32* @IID_IPersistStreamInit, i8** %6)
  store i64 %7, i64* %4, align 8
  %8 = load i64, i64* %4, align 8
  %9 = load i64, i64* @S_OK, align 8
  %10 = icmp eq i64 %8, %9
  %11 = zext i1 %10 to i32
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @ok(i32 %11, i8* getelementptr inbounds ([53 x i8], [53 x i8]* @.str, i64 0, i64 0), i64 %12)
  %14 = load i64, i64* %4, align 8
  %15 = call i64 @FAILED(i64 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %1
  br label %34

18:                                               ; preds = %1
  %19 = load i32, i32* @TRUE, align 4
  store i32 %19, i32* @resetting_document, align 4
  %20 = load i32*, i32** %3, align 8
  %21 = call i64 @IPersistStreamInit_InitNew(i32* %20)
  store i64 %21, i64* %4, align 8
  %22 = load i64, i64* %4, align 8
  %23 = load i64, i64* @S_OK, align 8
  %24 = icmp eq i64 %22, %23
  %25 = zext i1 %24 to i32
  %26 = load i64, i64* %4, align 8
  %27 = call i32 @ok(i32 %25, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0), i64 %26)
  %28 = load i32, i32* @FALSE, align 4
  store i32 %28, i32* @resetting_document, align 4
  %29 = load i32*, i32** %2, align 8
  %30 = load i32, i32* @FALSE, align 4
  %31 = call i32 @test_GetCurMoniker(i32* %29, i32* null, i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0), i32 %30)
  %32 = load i32*, i32** %3, align 8
  %33 = call i32 @IPersistStreamInit_Release(i32* %32)
  br label %34

34:                                               ; preds = %18, %17
  ret void
}

declare dso_local i64 @IHTMLDocument2_QueryInterface(i32*, i32*, i8**) #1

declare dso_local i32 @ok(i32, i8*, i64) #1

declare dso_local i64 @FAILED(i64) #1

declare dso_local i64 @IPersistStreamInit_InitNew(i32*) #1

declare dso_local i32 @test_GetCurMoniker(i32*, i32*, i8*, i32) #1

declare dso_local i32 @IPersistStreamInit_Release(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
